# WebX

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  README.md  docker-compose.override.yml  docker-compose.yml  go.work  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
apps/notification-service/: .air.toml  go.mod  package.json
apps/notification-service/cmd/server/: main.go
apps/notification-service/internal/config/: config.go
apps/notification-service/internal/kafka/: consumer.go
apps/notification-service/internal/websocket/: handler.go  hub.go
apps/planetary-service/: pyproject.toml
apps/planetary-service/src/: __init__.py  cache.py  config.py  database.py  horizons_client.py  kafka.py  main.py
apps/planetary-service/src/middleware/: __init__.py  logging.py  request_id.py
apps/planetary-service/src/models/: __init__.py  planetary.py
apps/planetary-service/src/routers/: __init__.py  health.py  planets.py
apps/planetary-service/tests/: conftest.py  test_health.py
apps/satellite-service/: .eslintrc.js  jest.config.js  package.json  tsconfig.json
apps/satellite-service/prisma/: schema.prisma
apps/satellite-service/src/: app.ts  server.ts
apps/satellite-service/src/__tests__/: sgp4.test.ts
apps/web/: .eslintrc.js  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
infra/docker/notification-service/: Dockerfile
infra/docker/planetary-service/: Dockerfile
infra/docker/rabbitmq/: rabbitmq.conf
infra/docker/satellite-service/: Dockerfile
infra/docker/web/: Dockerfile
infra/observability/prometheus/: prometheus.yml
(+24 files in other folders)
